# gslODE

./: .gitignore  AnalyseOutput.R  CMakeLists.txt  LICENSE  README.md  odeTests.R
gsl/ode-initval2/: bsimp.c  control.c  cscal.c  cstd.c  driver.c  evolve.c  modnewton1.c  msadams.c  msbdf.c  rk1imp.c  rk2.c  rk2imp.c  rk4.c  rk4imp.c  rk8pd.c  rkck.c  rkf45.c  step.c
gsl/permutation/: gsl_permute.h  gsl_permute_matrix.h  gsl_permute_vector.h  permute.c
include/: ode.h
src/: main.c  ode.c
tests/: test_input.csv  test_lorenz_input.csv  test_nar_input.csv  test_rob_input.csv
